Update link for EOS Hackathon Sydney article

--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@
 
     <div class="section">
       <h3>Featured</h3>
-      <p><a href="https://block.one/news/australians-win-top-awards-at-eos-hackathon-sydney/" target="_blank">Australians Win Top Awards at EOS Hackathon Sydney</a></p>
+      <p><a href="https://b1.com/press/australians-win-top-awards-at-eos-hackathon-sydney-as-over-200-contestants-from-more-than-50-teams-compete/" target="_blank">Australians Win Top Awards at EOS Hackathon Sydney</a></p>
     </div>
 
     <footer>
